fix hack and refactor

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,3 +33,7 @@
   name = "github.com/tendermint/tendermint"
   source = "github.com/jdkanani/tendermint"
   revision = "2e8b33b2dcae68679d0c05c65177fce45949006b"
+
+[[constraint]]
+  name = "github.com/tendermint/go-amino"
+  version = "v0.12.0-rc0"
